# el_shop

./: .coverage  .gitignore  main.py  pyproject.toml
el_shop/: pyproject.toml
el_shop/tests/: conftest.py  test_Item.py
tests/: conftest.py  test_Item.py  test_keyboard.py  test_phone.py
utils/: config.py  item.py  keyboard.py
